<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="20dp"
    android:background="@color/dark_purple"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/email_edit_Text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="100dp"
        android:maxHeight="200dp"
        android:src="@drawable/logo"
        android:adjustViewBounds="true"
        android:contentDescription="@string/logo" />

    <TextView
        android:id="@+id/app_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="@+id/email_edit_Text"
        android:layout_marginBottom="60dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/motivation"
        android:textSize="60sp"
        android:fontFamily="monospace"
        android:textColor="@color/white"
        />

    <EditText
        android:id="@+id/email_edit_Text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/email"
        android:textColor="@color/white"
        android:hint="@string/enter_email"
        android:textColorHint="@color/white"
        android:textSize="20sp"
        android:maxLength="255"
        android:singleLine="true"
        android:imeOptions="actionNext"
        android:fontFamily="@font/cabin"
        android:inputType="textEmailAddress"
        android:backgroundTint="@color/white"
        android:drawableStart="@drawable/ic_baseline_email_24"
        android:drawablePadding="10dp"
        android:autofillHints="name" />

    <EditText
        android:id="@+id/password_edit_Text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email_edit_Text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/password"
        android:textColor="@color/white"
        android:hint="@string/enter_password"
        android:textColorHint="@color/white"
        android:textSize="20sp"
        android:maxLength="255"
        android:singleLine="true"
        android:imeOptions="actionNext"
        android:fontFamily="@font/cabin"
        android:inputType="textPassword"
        android:backgroundTint="@color/white"
        android:drawableStart="@drawable/ic_baseline_lock_24"
        android:drawablePadding="10dp"
        android:autofillHints="password" />

    <Button
        android:id="@+id/enter_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="50dp"
        android:text="@string/enter"

        />
    <Button
        android:id="@+id/create_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/create_account"
        />

</androidx.constraintlayout.widget.ConstraintLayout>